--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,10 @@
 	margin:0px auto;
 	padding:10px;
 }
+
+.custom-fill{
+    max-height: 100%;
+    overflow: hidden;
+    padding: 20px;
+    border-radius: 0 0 2px 2px;
+}
