--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 
 .custom-fill{
     max-height: 100%;
+    height: auto;
     overflow: hidden;
     padding: 20px;
     border-radius: 0 0 2px 2px;
@@ -13,4 +14,14 @@
 
 nav.title-padding{
     padding: 20px;
+}
+
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+main {
+    flex: 1 0 auto;
 }
